--- a/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
@@ -2,9 +2,144 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LoginActivity">
 
+    <!-- 전체 컨테이너-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_login_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- 앱 설명 텍스트 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_welcome_message_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/tv_welcome_message_part1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="노트북 대여부터 반납까지,"
+                android:textColor="@color/gray700"
+                style="@style/Display2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_welcome_message_part2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="꼼대"
+                android:textColor="@color/blue500"
+                style="@style/Display1"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_message_part1"
+                app:layout_constraintEnd_toStartOf="@+id/tv_welcome_message_part3"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_welcome_message_part3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="가 함께합니다"
+                android:textColor="@color/gray700"
+                style="@style/Display2"
+                app:layout_constraintStart_toEndOf="@id/tv_welcome_message_part2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_welcome_message_part2" />
+
+            <TextView
+                android:id="@+id/tv_sub_welcome_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="꼼대와 함께하는 스마트한 노트북 관리"
+                android:textColor="@color/gray300"
+                style="@style/Title3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_message_part2"
+                android:layout_marginTop="10dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- 앱 캐릭터 이미지 -->
+        <ImageView
+            android:id="@+id/iv_kkomi_login"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_kkomi_login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_welcome_message_container" />
+
+
+        <!-- 이메일 입력 -->
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="24dp"
+            android:hint="이메일"
+            android:textSize="16sp"
+            android:inputType="textEmailAddress"
+            android:padding="16dp"
+            android:textColorHint="#9297A0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_kkomi_login" />
+
+        <!-- 비밀번호 입력 -->
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="24dp"
+            android:hint="비밀번호"
+            android:textSize="16sp"
+            android:inputType="textPassword"
+            android:padding="16dp"
+            android:textColorHint="#9297A0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_email" />
+
+        <!-- 로그인 버튼 -->
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="24dp"
+            android:backgroundTint="#3B82F6"
+            android:text="로그인"
+            android:textColor="@color/white"
+            style="@style/Title3"
+            app:cornerRadius="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_password" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
