--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/tv_serial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="시리얼번호"
+                android:hint="시리얼번호"
                 app:layout_constraintTop_toBottomOf="@id/tv_title"
                 style="@style/Title1"
                 android:textColor="@color/gray700"
@@ -57,8 +57,7 @@
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusBottomEnd="10dp"
-                app:boxStrokeColor="@color/gray400"
-                android:hintEnabled="false">
+                app:boxStrokeColor="@color/gray400">
 
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -93,8 +92,7 @@
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusBottomEnd="10dp"
-                app:boxStrokeColor="@color/gray400"
-                android:hintEnabled="false">
+                app:boxStrokeColor="@color/gray400">
 
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -255,7 +253,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:background="@drawable/ic_plus"
                     android:backgroundTint="@color/gray500"/>
-                
+
                 <TextView
                     android:id="@+id/tv_laptop_count"
                     android:layout_width="wrap_content"
