--- a/frontend/Kkomdae/app/src/main/res/values/colors.xml
+++ b/frontend/Kkomdae/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="blue500">#0068FF</color>
+    <color name="blue500">#3B82F6</color>
     <color name="blue400">#3391FF</color>
     <color name="blue300">#70BBFF</color>
     <color name="blue200">#B2DCFF</color>
