--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
@@ -57,8 +57,7 @@
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusBottomEnd="10dp"
-                app:boxStrokeColor="@color/gray400"
-                android:hintEnabled="false">
+                app:boxStrokeColor="@color/gray400">
 
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -93,8 +92,7 @@
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusBottomEnd="10dp"
-                app:boxStrokeColor="@color/gray400"
-                android:hintEnabled="false">
+                app:boxStrokeColor="@color/gray400">
 
 
                 <com.google.android.material.textfield.TextInputEditText
