feat:  기기ë등록가이드 화면 xml S12P21D101-123

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_oath.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_oath.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -504,7 +505,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardAgreement4"
                 android:layout_marginTop="24dp"
-                android:text="완료"
+                android:text="다음"
                 android:backgroundTint="@color/blue200"
                 style="@style/Title1"/>
 
