--- a/frontend/Kkomdae/app/src/main/res/values-v28/styles.xml
+++ b/frontend/Kkomdae/app/src/main/res/values-v28/styles.xml
@@ -37,7 +37,8 @@
     </style>
 
     <style name="Title4">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textFontWeight">600</item>
         <item name="android:fontFamily">@font/pretendard</item>
         <item name="android:lineSpacingMultiplier">1.4</item> <!-- 줄 간격 135% 적용 -->
     </style>
