feat: 액정 가이드 화면 xml 개발
- 촬영 액티비티도 추가, 촬영가이드 프레그먼트(액티비티 변수) 변경

xml 개발완료
S12P21D101-94 #done

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
@@ -191,6 +191,7 @@
 
 
 <Button
+    android:id="@+id/btn_next"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/blue300"
