design: error 컬러 코드 변경 S12P21D101-190

--- a/frontend/Kkomdae/app/src/main/res/values/colors.xml
+++ b/frontend/Kkomdae/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="orange100">#FFF3E7</color>
     <color name="orange50">#FFFAF5</color>
 
-    <color name="error">#FFFAF5</color>
+    <color name="error">#E22B40</color>
     <color name="brown">#C0716D</color>
 
 
